--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
 <head>
   <title>Nissan GTR Skyline</title>
-</head>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
 <body>
   <h1>GTR:)</h1>
-  <img src="GTR.jpg">
-    <p id="biuttuihlit"</p>
+  <p id="gg5">this is the worst website you will ever see in your life</p>
+<p id="GG5">why are you even looking at this website???</p>
+  <img src="cool.jpg">
+  <img src="image.jpg">
 </body>
 </html>
